--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -22,13 +22,12 @@ blueprint:
           multiple: false
     light:
       name: Lights
-      description: The lights to control with + / - and to turn off 
+      description: The lights to control with + / - and to turn off
       selector:
         entity:
           domain:
           - light
           multiple: false
-
     included_scenes:
       name: Hue Button Scenes
       description: Scenes to be included
@@ -36,92 +35,104 @@ blueprint:
       selector:
         entity:
           filter:
-            domain: scene
+          - domain:
+            - scene
           multiple: true
-
     scene_helper:
       name: Scene helper
-      description: Please select a Input Number Helper to be used to record the scene sequence.
+      description: Please select a Input Number Helper to be used to record the scene
+        sequence.
       selector:
         entity:
           domain:
           - input_number
           multiple: false
-
     transition_time:
       name: Transition time
       description: Transition time when changes
       default: 1
       selector:
         number:
-          min: 0
-          max: 3
+          min: 0.0
+          max: 3.0
           step: 0.1
           unit_of_measurement: sec
-
+          mode: slider
     hold_press_change:
       name: Hold press change
       description: Transition time between changes
       default: 17
       selector:
         number:
-          min: 0
-          max: 25
-          step: 1
+          min: 0.0
+          max: 25.0
+          step: 1.0
           unit_of_measurement: '%'
-
+          mode: slider
     reset_after:
       name: Reset After
-      description: Timeout can be set after which the order is reset to the first scene.
+      description: Timeout can be set after which the order is reset to the first
+        scene.
       default: 5
       selector:
         number:
-          min: 1
-          max: 120
-          step: 1
+          min: 1.0
+          max: 120.0
+          step: 1.0
           unit_of_measurement: s
-
+          mode: slider
 mode: restart
 max_exceeded: silent
 trigger:
-  - platform: event
-    event_type: zha_event
-    event_data:
-      device_id: !input dimmer_switch
+- platform: event
+  event_type: zha_event
+  event_data:
+    device_id: !input dimmer_switch
 action:
 - variables:
     command: '{{ trigger.event.data.command }}'
     included_scenes: !input included_scenes
     scene_helper: !input scene_helper
     reset_after: !input reset_after
-    active_scene: '{{ iif(states(scene_helper) | int(0) >= included_scenes | count, 0, states(scene_helper)) | int(0) }}'
+    active_scene: '{{ iif(states(scene_helper) | int(0) >= included_scenes | count,
+      0, states(scene_helper)) | int(0) }}'
     target_lights: !input light
-    hold_press_change: !input hold_press_change 
-
+    hold_press_change: !input hold_press_change
 - choose:
+  # - conditions:
+  #   - '{{ command == ''on_press'' }}'
+  #   sequence:
+  #   - choose:
+  #     - conditions: '{{ is_state(target_lights, ''on'') }}'
+  #       sequence:
+  #       - service: light.turn_off
+  #         target:
+  #           entity_id: !input light
+  #     - conditions: '{{ is_state(target_lights, ''off'') }}'
+  #       sequence:
+  #       - service: scene.turn_on
+  #         target:
+  #           entity_id: !input main_scene
   - conditions:
-      - '{{ command == ''on_press'' }}'
-    sequence:
-    - choose:
-      - conditions: '{{ is_state(target_lights, ''on'') }}'
-        sequence:
-        - service: light.turn_off
-          target:
-            entity_id: !input light
-      - conditions: '{{ is_state(target_lights, ''off'') }}'
-        sequence:
-        - service: scene.turn_on
-          target:
-            entity_id: !input main_scene
-
-  - conditions: '{{ command == ''on_double_press'' }}'
+    - '{{ command == ''on'' }}'
     sequence:
     - service: scene.turn_on
       target:
         entity_id: !input main_scene
-
   - conditions:
-    - "{{ command == 'up_hold' or command == 'up_press'}}"
+    - '{{ command == ''off_with_effect'' }}'
+    sequence:
+    - service: light.turn_off
+      target:
+        entity_id: !input light
+
+  - conditions: '{{ command == ''off_double_press'' }}'
+    sequence:
+    - service: scene.turn_on
+      target:
+        entity_id: !input main_scene
+  - conditions:
+    - '{{ command == ''up_hold'' or command == ''up_press''}}'
     sequence:
     - choose:
       - conditions: '{{ (state_attr(target_lights, ''brightness'') + ((hold_press_change/100)*254)
@@ -129,8 +140,8 @@ action:
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-              ''on'') | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+              | map(attribute=''entity_id'') | list }}'
           data:
             brightness_step_pct: '{{ hold_press_change }}'
             transition: !input transition_time
@@ -139,12 +150,11 @@ action:
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-              ''on'') | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+              | map(attribute=''entity_id'') | list }}'
           data:
             brightness_pct: 100
             transition: !input transition_time
-
   - conditions: '{{ command == ''up_double_press'' }}'
     sequence:
     - service: light.turn_on
@@ -154,8 +164,7 @@ action:
       data:
         brightness_pct: 100
         transition: !input transition_time
-
-  - conditions: 
+  - conditions:
     - '{{ command == ''down_hold'' or command == ''down_press'' }}'
     sequence:
     - choose:
@@ -164,24 +173,22 @@ action:
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-              ''on'') | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+              | map(attribute=''entity_id'') | list }}'
           data:
             brightness_step_pct: '{{ -hold_press_change }}'
             transition: !input transition_time
-
       - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
-          | round)  < hold_press_change or (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
-          | round)  >= 1}}'
+          | round)  < hold_press_change or (state_attr(target_lights, ''brightness'')
+          - ((hold_press_change/100)*254) | round)  >= 1}}'
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-              ''on'') | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+              | map(attribute=''entity_id'') | list }}'
           data:
             brightness_pct: 1
             transition: !input transition_time
-
   - conditions: '{{ command == ''down_double_press'' }}'
     sequence:
     - service: light.turn_on
@@ -191,20 +198,19 @@ action:
       data:
         brightness_pct: 1
         transition: !input transition_time
-
   - conditions: '{{ command == ''off_press'' }}'
     sequence:
-      - service: scene.turn_on
-        data_template:
-          transition: !input transition_time
-          entity_id: >
-            {{ included_scenes[active_scene] }}
-      - service: input_number.set_value
-        target:
-          entity_id: !input scene_helper
-        data:
-          value: '{{ active_scene + 1}}'
+    - service: scene.turn_on
+      data_template:
+        transition: !input transition_time
+        entity_id: '{{ included_scenes[active_scene] }}
 
+          '
+    - service: input_number.set_value
+      target:
+        entity_id: !input scene_helper
+      data:
+        value: '{{ active_scene + 1}}'
 - delay:
     hours: 0
     minutes: 0
