--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -43,14 +43,12 @@ blueprint:
               value: a6ba3a6e-1e3a-41fd-84f2-f7b021935deb
           multiple: true
     scene_helper:
-      name: Scene helper
-      description:
-        Please select a Input Number Helper to be used to record the scene
-        sequence.
+      name: Scene Helper
+      description: Input text helper to store the scene sequence in JSON format with timestamp
       selector:
         entity:
           domain:
-            - input_number
+            - input_text
           multiple: false
     transition_time:
       name: Transition time
@@ -100,11 +98,24 @@ action:
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
-      active_scene:
-        "{{ iif(states(scene_helper) | int(0) >= included_scenes | count,
-        1, states(scene_helper)) | int(0) }}"
       target_lights: !input light
       hold_press_change: !input hold_press_change
+      helper_data: "{{ states(scene_helper) | from_json }}"
+      current_scene: "{{ (helper_data.scene | int(0)) if helper_data is defined else 0 }}"
+      last_update: "{{ (helper_data.timestamp | as_timestamp) if helper_data is defined else 0 }}"
+
+  - choose:
+      - conditions:
+          - "{{ (as_timestamp(now()) - last_update) > reset_after }}"
+        sequence:
+          - service: input_text.set_value
+            target:
+              entity_id: !input scene_helper
+            data:
+              value: >
+                {{ {"scene": 0, "timestamp": as_timestamp(now())} | to_json }}
+          - variables:
+              current_scene: 0
   - choose:
       - conditions:
           - "{{ command == 'on_press' }}"
@@ -217,25 +228,19 @@ action:
               transition: !input transition_time
       - conditions: "{{ command == 'off_press' }}"
         sequence:
-          - service: scene_presets.apply_preset
-            data:
-              preset_id: "{{ included_scenes[active_scene] }}"
-              targets:
-                entity_id: !input light
-              shuffle: false
-              smart_shuffle: false
-          - service: input_number.set_value
+          - service: scene.turn_on
+            data_template:
+              transition: !input transition_time
+              entity_id: "{{ included_scenes[current_scene] }}"
+          - service: input_text.set_value
             target:
               entity_id: !input scene_helper
             data:
-              value: "{{ active_scene + 1}}"
-  - delay:
-      hours: 0
-      minutes: 0
-      seconds: !input reset_after
-      milliseconds: 0
-  - service: input_number.set_value
+              value: >
+                {{ {"scene": (current_scene + 1) % included_scenes | length, "timestamp": as_timestamp(now())} | to_json }}
+  - service: input_text.set_value
     target:
       entity_id: !input scene_helper
     data:
-      value: 1
+      value: >
+        {{ {"scene": current_scene, "timestamp": as_timestamp(now())} | to_json }}
