--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -105,8 +105,8 @@ action:
         {% else %}
           { "scene": 1, "timestamp": {{as_timestamp(now())}} }
         {% endif %}
-      current_scene: "{{ (helper_data.scene | int(0)) if helper_data is defined else 1 }}"
-      last_update: "{{ (helper_data.timestamp | as_timestamp) if helper_data is defined else 0 }}"
+      current_scene: "{{ (helper_data.scene | int(0)) }}"
+      last_update: "{{ (helper_data.timestamp | as_timestamp) }}"
   - choose:
       - conditions:
           - "{{ (as_timestamp(now()) - last_update) > reset_after }}"
