--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -101,7 +101,7 @@ action:
       current_scene: >
         {% set data = states(scene_helper) %}
         {% if data != "unknown" %}
-          {% if (as_timestamp(now()) - 1723005766.599826 ) < reset_after %}
+          {% if (as_timestamp(now()) - (data | from_json).timestamp) < reset_after %}
             {{ (data | from_json).scene }}
           {% else %}
           1
@@ -109,7 +109,6 @@ action:
         {% else %}
           1
         {% endif %}
-
   - choose:
       - conditions:
           - "{{ command == 'on_press' }}"
