--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -83,7 +83,7 @@ blueprint:
           step: 1.0
           unit_of_measurement: s
           mode: slider
-mode: parallel
+mode: queued
 max_exceeded: silent
 trigger:
   - platform: event
