--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -247,7 +247,7 @@ action:
               transition: !input transition_time
       - conditions: "{{ command == 'off_press' }}"
         sequence:
-          - conditions: "{{ (included_scenes[current_preset] | from_json).preset_id  == 'static' }}"
+          - conditions: "{{ (included_scenes[current_preset] | from_json).type  == 'static' }}"
             sequence:
               - service: scene_presets.apply_preset
                 data:
@@ -256,7 +256,7 @@ action:
                     entity_id: !input light
                   shuffle: false
                   smart_shuffle: false
-          - conditions: "{{ (included_scenes[current_preset] | from_json).preset_id  == 'dynamic' }}"
+          - conditions: "{{ (included_scenes[current_preset] | from_json).type  == 'dynamic' }}"
             sequence:
               - service: scene_presets.start_dynamic_scene
                 data:
