--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -29,46 +29,46 @@ blueprint:
           options:
             - label: Rest
               value: >
-                {{{
+                {
                   "preset_id": "e03267e7-9914-4f47-97fe-63c0bd317fe7",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Relax
               value: >
-                {{{
+                {
                   "preset_id": "e71b2ef3-1b15-4c4b-b036-4b3d6efe58f8",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Read
               value: >
-                {{{
+                {
                   "preset_id": "035b6ecf-414e-4781-abc7-3911556097cb",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Concentrate
               value: >
-                {{{
+                {
                   "preset_id": "0cbec4e8-d064-4457-986a-fe6078a63f39",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Bright
               value: >
-                {{{
+                {
                   "preset_id": "6d10a807-7330-46d1-b093-c15520ba72c0",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Dimmed
               value: >
-                {{{
+                {
                   "preset_id": "8f55e62a-e5f8-456a-9e8b-61f314bd4e99",
-                  "type": "static",
-                }}}
+                  "type": "static"
+                }
             - label: Galaxy
               value: >
-                {{{
+                {
                   "preset_id": "a6ba3a6e-1e3a-41fd-84f2-f7b021935deb",
-                  "type": "dynamic",
-                }}}
+                  "type": "dynamic"
+                }
           multiple: true
     scene_helper:
       name: Scene Helper
@@ -158,6 +158,10 @@ action:
                       entity_id: !input light
                     data:
                       transition: !input transition_time
+                  - service: scene_presets.stop_dynamic_scenes_for_targets
+                    data:
+                      targets:
+                        entity_id: !input light
       - conditions:
           - "{{ command == 'on_double_press' }}"
         sequence:
@@ -247,24 +251,33 @@ action:
               transition: !input transition_time
       - conditions: "{{ command == 'off_press' }}"
         sequence:
-          - conditions: "{{ (included_scenes[current_preset] | from_json).type  == 'static' }}"
-            sequence:
-              - service: scene_presets.apply_preset
-                data:
-                  preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
-                  targets:
-                    entity_id: !input light
-                  shuffle: false
-                  smart_shuffle: false
-          - conditions: "{{ (included_scenes[current_preset] | from_json).type  == 'dynamic' }}"
-            sequence:
-              - service: scene_presets.start_dynamic_scene
-                data:
-                  preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
-                  targets:
-                    entity_id: !input light
-                  transition: 45
-                  interval: 60
+          - choose:
+              - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'static' }}"
+                sequence:
+                  - service: scene_presets.stop_dynamic_scenes_for_targets
+                    data:
+                      targets:
+                        entity_id: !input light
+                  - service: scene_presets.apply_preset
+                    data:
+                      preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
+                      targets:
+                        entity_id: !input light
+                      shuffle: false
+                      smart_shuffle: false
+              - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'dynamic' }}"
+                sequence:
+                  - service: scene_presets.stop_dynamic_scenes_for_targets
+                    data:
+                      targets:
+                        entity_id: !input light
+                  - service: scene_presets.start_dynamic_scene
+                    data:
+                      preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
+                      targets:
+                        entity_id: !input light
+                      transition: 45
+                      interval: 60
           - service: input_text.set_value
             target:
               entity_id: !input scene_helper
