--- a/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
+++ b/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
@@ -244,50 +244,64 @@ action:
               targets:
                 entity_id: !input light
       - conditions:
-          - "{{ command == 'move_with_on_off'}}"
+          - "{{ command == 'move_with_on_off' }}"
         sequence:
-          - choose:
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - service: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_step_pct: "{{ hold_press_change }}"
-                      transition: !input transition_time
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - service: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_pct: 100
-                      transition: !input transition_time
+          - repeat:
+              while:
+                - condition: template
+                  value_template: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255) | list | length > 0 }}"
+              sequence:
+                - choose:
+                    - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
+                      sequence:
+                        - service: light.turn_on
+                          target:
+                            entity_id:
+                              "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                              | map(attribute='entity_id') | list }}"
+                          data:
+                            brightness_step_pct: "{{ hold_press_change }}"
+                            transition: !input transition_time
+                    - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
+                      sequence:
+                        - service: light.turn_on
+                          target:
+                            entity_id:
+                              "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                              | map(attribute='entity_id') | list }}"
+                          data:
+                            brightness_pct: 100
+                            transition: !input transition_time
+                - delay:
+                    seconds: !input transition_time
       - conditions:
           - "{{ command == 'move' }}"
         sequence:
-          - choose:
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - service: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_step_pct: "{{ -hold_press_change }}"
-                      transition: !input transition_time
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'le', hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - service: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_pct: 1
-                      transition: !input transition_time
+          - repeat:
+              while:
+                - condition: template
+                  value_template: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', 0) | list | length > 0 }}"
+              sequence:
+                - choose:
+                    - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
+                      sequence:
+                        - service: light.turn_on
+                          target:
+                            entity_id:
+                              "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                              | map(attribute='entity_id') | list }}"
+                          data:
+                            brightness_step_pct: "{{ -hold_press_change }}"
+                            transition: !input transition_time
+                    - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'le', hold_press_change) | list | length > 0 }}"
+                      sequence:
+                        - service: light.turn_on
+                          target:
+                            entity_id:
+                              "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                              | map(attribute='entity_id') | list }}"
+                          data:
+                            brightness_pct: 0
+                            transition: !input transition_time
+                - delay:
+                    seconds: !input transition_time
