--- a/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
+++ b/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
@@ -169,7 +169,7 @@ blueprint:
           step: 1.0
           unit_of_measurement: s
           mode: slider
-mode: queued
+mode: restart
 max_exceeded: silent
 trigger:
   - platform: event
